Make sure Start Trial CTA button label fully visible in other languages. Other minor adjustment to Select Plan view layout to better deal with string length variation.

--- a/app/dawn-hub/Views/OnboardingViews/Step4_ChoosePlanView/ChoosePlanView.scss
+++ b/app/dawn-hub/Views/OnboardingViews/Step4_ChoosePlanView/ChoosePlanView.scss
@@ -56,6 +56,7 @@ $medium-large-breakpoint: 1118px; // Break when 3 cards on the screen overflow t
 	margin-top: 12px;
 	display: flex;
 	justify-content: center;
+  	text-align: center;
 	font-size: 18px;
 }
 .ChoosePlanView__searchPromoContainer {
@@ -68,7 +69,7 @@ $medium-large-breakpoint: 1118px; // Break when 3 cards on the screen overflow t
 .ChoosePlanView__searchLogo {
 	height: 36px;
 	width: 166px;
-	margin: 65px auto 0 auto;
+	margin: 50px auto 0 auto;
 	background-image: url('/app/images/hub/ChooseDefaultSearchView/search-engine-logo-ghosteryglow.svg');
 }
 .ChoosePlanView__adFree {
@@ -95,12 +96,17 @@ $medium-large-breakpoint: 1118px; // Break when 3 cards on the screen overflow t
 	text-align: center;
 	color: $tundora;
 }
+
+.ChoosePlanView__searchCTAButtonContainer {
+  display: flex;
+  justify-content: center;
+}
+
 .ChoosePlanView__searchCTAButton {
-	display: flex;
 	justify-content: center;
 	margin: 48px auto 0 auto;
-	height: 44px;
-	width: 162px;
+	min-height: 44px;
+	min-width: 162px;
 	padding: 7.7px 14px;
 	line-height: 22px;
 	background: linear-gradient(
